Bug 1237629: [webm] Parse into BlockGroup element. r=kinetik